src/mesa/drivers/x11/glxapi.h
@@ -37,7 +37,6 @@
  * work properly.
  */
 typedef struct __GLXcontextRec {
-   Display *currentDpy;
    GLboolean isDirect;
    GLXDrawable currentDrawable;
    GLXDrawable currentReadable;
